Added MUI, Classnames, Formik, React-Icons

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^1.2.0",
+    "@material-ui/core": "^4.11.2",
     "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -13,12 +14,15 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "axios": "^0.21.0",
+    "classnames": "^2.2.6",
     "dayjs": "^1.9.7",
+    "formik": "^2.2.6",
     "history": "^5.0.0",
     "markdown-to-jsx": "^7.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.12.2",
+    "react-icons": "^4.1.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "4.0.1",
@@ -53,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.11",
     "@types/markdown-to-jsx": "^6.11.3",
     "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.6",
